// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`CustomerSatisfaction > should check hover and unhover 1`] = `
<DocumentFragment>
  @keyframes animation-0 {
  from, 10%, 40%, 80%, to {
    -webkit-transform: translate3d(0, 0, 0);
    -moz-transform: translate3d(0, 0, 0);
    -ms-transform: translate3d(0, 0, 0);
    transform: translate3d(0, 0, 0);
    -webkit-transform: rotate(0deg);
    -moz-transform: rotate(0deg);
    -ms-transform: rotate(0deg);
    transform: rotate(0deg);
  }

  30% {
    -webkit-transform: translate3d(0, 5px, 0);
    -moz-transform: translate3d(0, 5px, 0);
    -ms-transform: translate3d(0, 5px, 0);
    transform: translate3d(0, 5px, 0);
    -webkit-transform: rotate(5deg);
    -moz-transform: rotate(5deg);
    -ms-transform: rotate(5deg);
    transform: rotate(5deg);
  }

  60% {
    -webkit-transform: translate3d(0, -6px, 0);
    -moz-transform: translate3d(0, -6px, 0);
    -ms-transform: translate3d(0, -6px, 0);
    transform: translate3d(0, -6px, 0);
  }

  90% {
    -webkit-transform: translate3d(0, -2px, 0);
    -moz-transform: translate3d(0, -2px, 0);
    -ms-transform: translate3d(0, -2px, 0);
    transform: translate3d(0, -2px, 0);
  }
}

.emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 0rem;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.emotion-2 {
  height: 88px;
  width: 88px;
  cursor: pointer;
  -webkit-transition: -webkit-transform 1s cubic-bezier(0.19, 1, 0.22, 1);
  transition: transform 1s cubic-bezier(0.19, 1, 0.22, 1);
}

.emotion-2:hover,
.emotion-2:focus {
  -webkit-transform: scale(1.2);
  -moz-transform: scale(1.2);
  -ms-transform: scale(1.2);
  transform: scale(1.2);
}

.emotion-8 {
  height: 88px;
  width: 88px;
  cursor: pointer;
  -webkit-transition: -webkit-transform 1s cubic-bezier(0.19, 1, 0.22, 1);
  transition: transform 1s cubic-bezier(0.19, 1, 0.22, 1);
  -webkit-animation: animation-0 1s ease infinite;
  animation: animation-0 1s ease infinite;
}

.emotion-8:hover,
.emotion-8:focus {
  -webkit-transform: scale(1.2);
  -moz-transform: scale(1.2);
  -ms-transform: scale(1.2);
  transform: scale(1.2);
}

<div
    data-testid="testing"
  >
    <div
      class="emotion-0 emotion-1"
      data-testid="customer-satisfaction"
    >
      <img
        class="emotion-2 emotion-3"
        data-testid="customer-satisfaction-1"
        src="/src/components/CustomerSatisfaction/assets/1-5.svg"
      />
      <img
        class="emotion-2 emotion-3"
        data-testid="customer-satisfaction-2"
        src="/src/components/CustomerSatisfaction/assets/2-5.svg"
      />
      <img
        class="emotion-2 emotion-3"
        data-testid="customer-satisfaction-3"
        src="/src/components/CustomerSatisfaction/assets/3-5.svg"
      />
      <img
        class="emotion-8 emotion-3"
        data-testid="customer-satisfaction-4"
        src="/src/components/CustomerSatisfaction/assets/4-5.svg"
      />
      <img
        class="emotion-2 emotion-3"
        data-testid="customer-satisfaction-5"
        src="/src/components/CustomerSatisfaction/assets/5-5NB.svg"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`CustomerSatisfaction > should work with parameters 1`] = `
<DocumentFragment>
  @keyframes animation-0 {
  from, 10%, 40%, 80%, to {
    -webkit-transform: translate3d(0, 0, 0);
    -moz-transform: translate3d(0, 0, 0);
    -ms-transform: translate3d(0, 0, 0);
    transform: translate3d(0, 0, 0);
    -webkit-transform: rotate(0deg);
    -moz-transform: rotate(0deg);
    -ms-transform: rotate(0deg);
    transform: rotate(0deg);
  }

  30% {
    -webkit-transform: translate3d(0, 5px, 0);
    -moz-transform: translate3d(0, 5px, 0);
    -ms-transform: translate3d(0, 5px, 0);
    transform: translate3d(0, 5px, 0);
    -webkit-transform: rotate(5deg);
    -moz-transform: rotate(5deg);
    -ms-transform: rotate(5deg);
    transform: rotate(5deg);
  }

  60% {
    -webkit-transform: translate3d(0, -6px, 0);
    -moz-transform: translate3d(0, -6px, 0);
    -ms-transform: translate3d(0, -6px, 0);
    transform: translate3d(0, -6px, 0);
  }

  90% {
    -webkit-transform: translate3d(0, -2px, 0);
    -moz-transform: translate3d(0, -2px, 0);
    -ms-transform: translate3d(0, -2px, 0);
    transform: translate3d(0, -2px, 0);
  }
}

.emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 0rem;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.emotion-2 {
  height: 88px;
  width: 88px;
  cursor: pointer;
  -webkit-transition: -webkit-transform 1s cubic-bezier(0.19, 1, 0.22, 1);
  transition: transform 1s cubic-bezier(0.19, 1, 0.22, 1);
}

.emotion-2:hover,
.emotion-2:focus {
  -webkit-transform: scale(1.2);
  -moz-transform: scale(1.2);
  -ms-transform: scale(1.2);
  transform: scale(1.2);
}

.emotion-8 {
  height: 88px;
  width: 88px;
  cursor: pointer;
  -webkit-transition: -webkit-transform 1s cubic-bezier(0.19, 1, 0.22, 1);
  transition: transform 1s cubic-bezier(0.19, 1, 0.22, 1);
  -webkit-animation: animation-0 1s ease infinite;
  animation: animation-0 1s ease infinite;
}

.emotion-8:hover,
.emotion-8:focus {
  -webkit-transform: scale(1.2);
  -moz-transform: scale(1.2);
  -ms-transform: scale(1.2);
  transform: scale(1.2);
}

<div
    data-testid="testing"
  >
    <div
      class="emotion-0 emotion-1"
    >
      <img
        class="emotion-2 emotion-3"
        data-testid="undefined-1"
        src="/src/components/CustomerSatisfaction/assets/1-5.svg"
      />
      <img
        class="emotion-2 emotion-3"
        data-testid="undefined-2"
        src="/src/components/CustomerSatisfaction/assets/2-5.svg"
      />
      <img
        class="emotion-2 emotion-3"
        data-testid="undefined-3"
        src="/src/components/CustomerSatisfaction/assets/3-5.svg"
      />
      <img
        class="emotion-8 emotion-3"
        data-testid="undefined-4"
        src="/src/components/CustomerSatisfaction/assets/4-5.svg"
      />
      <img
        class="emotion-2 emotion-3"
        data-testid="undefined-5"
        src="/src/components/CustomerSatisfaction/assets/5-5NB.svg"
      />
    </div>
  </div>
</DocumentFragment>
`;
